# N_Body_Problem

./: .gitignore  CMakeLists.txt
output/: octree_speedup.txt
output/sim_basic/: frame0.txt  frame1.txt  frame2.txt
src/density/: density.cpp  non_linear_solver.h
src/force_computation/: Octree.cpp  Octree.h  Simulation.cpp  Simulation.h  force_computation.cpp  force_helper.cpp  force_helper.h  sdf.cpp  test_octree.cpp  test_sim.cpp
src/graphing/: newtonian_approx.py  sim.py
src/shared/: data_io.cpp  data_io.h  data_reader.cpp  data_reader.h  particle.cpp  particle.h
